# cc-swicher

./: .gitignore  Cargo.toml  README.md  SKILL.md  ccs  ccswicher.sh  ccswitcher.sh  install.sh  providers.json  uninstall.sh
.claude/skills/ccswitcher-release/: SKILL.md
.github/workflows/: release.yml
src/: main.rs
tests/: test_settings.sh
